[package]
name = "miso-examples"
version = "0.1.0"
authors = ["Alcides Fonseca <me@alcidesfonseca.com>"]


[features]
default = []
par = ["miso/par"]
ft = ["miso/ft"]


[dependencies]
miso = { path = "../miso", version = "0.1.0", default-features = false }
energy = { path = "../energy-rs", version = "0.1.0" }
rayon = "0.6.0"
time = "*"
num = "0.1"